--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.example.thiago.testeparse"
         minSdkVersion 15
@@ -21,7 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
@@ -30,5 +29,6 @@ dependencies {
     implementation 'com.parse:parse-android:1.15.7'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'junit:junit:4.12'
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
 }
